<resources>
    <string name="app_name">SDA</string>
    <string name="title_home">Ínicio</string>
    <string name="title_painel">Painel</string>
    <string name="title_historico">Histórico</string>
    <string name="title_menu">Menu</string>
    <string name="title_mypassword">Minha senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_bemvindo">Bem-vindo ao <b>SDA</b> o sistema de gerenciamento de senhas de forma sustentável.</string>
    <string name="text_sda_telaapres">O <b>SDA</b> ou <b>Sistema Digital de Atendimento</b> é o caminho para a sustentabilidade venha fazer parte desta causa!</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_atendente">Atendente</string>
    <string name="text_cliente">cliente</string>
    <string name="prompt_e_mail">E-mail</string>
</resources>
