<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_painel" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_historico"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_home"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_outros"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_outro" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/title_menu" />

</menu>